@@ -7,6 +7,7 @@ Curl and libcurl 7.11.2. A bugfix release.
 
 This release includes the following changes:
 
+ o removed maximum dir depth limit in the FTP code
  o the ares build now requires c-ares 1.2.0 or later
  o --tcp-nodelay and CURLOPT_TCP_NODELAY were added
  o curl/curlver.h contains the libcurl version info now
